tests/ui/coverage-attr/allowed-positions.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/allowed-positions.rs:106:25
   |
LL |     let _closure_expr = #[coverage(off)] || ();
   |                         ^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `#[coverage]` attribute cannot be used on type aliases
  --> $DIR/allowed-positions.rs:14:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on traits
  --> $DIR/allowed-positions.rs:17:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on associated consts
  --> $DIR/allowed-positions.rs:19:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/allowed-positions.rs:22:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on required trait methods
  --> $DIR/allowed-positions.rs:25:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to impl blocks, functions, closures, provided trait methods, trait methods in impl blocks, inherent methods, modules, and crates

error: `#[coverage]` attribute cannot be used on required trait methods
  --> $DIR/allowed-positions.rs:31:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to impl blocks, functions, closures, provided trait methods, trait methods in impl blocks, inherent methods, modules, and crates

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/allowed-positions.rs:39:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on associated types
  --> $DIR/allowed-positions.rs:56:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on structs
  --> $DIR/allowed-positions.rs:61:1
   |
LL | #[coverage(off)]
   | ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on struct fields
  --> $DIR/allowed-positions.rs:63:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on foreign statics
  --> $DIR/allowed-positions.rs:76:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on foreign types
  --> $DIR/allowed-positions.rs:79:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on foreign functions
  --> $DIR/allowed-positions.rs:82:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to methods, impl blocks, functions, closures, modules, and crates

error: `#[coverage]` attribute cannot be used on statements
  --> $DIR/allowed-positions.rs:88:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on statements
  --> $DIR/allowed-positions.rs:94:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on match arms
  --> $DIR/allowed-positions.rs:110:9
   |
LL |         #[coverage(off)]
   |         ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: `#[coverage]` attribute cannot be used on expressions
  --> $DIR/allowed-positions.rs:114:5
   |
LL |     #[coverage(off)]
   |     ^^^^^^^^^^^^^^^^
   |
   = help: `#[coverage]` can be applied to functions, impl blocks, modules, and crates

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0658`.
